<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addition.NewStudentActivity">
    <!-- todo 39: thêm các view cần thiết để nhập liệu và tạo mới thông tin sinh viên -->
    <Button
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/text_btn_new_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_lable"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_student_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_student_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edit_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_fullname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_student_id"
        app:layout_constraintStart_toStartOf="@+id/edit_student_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_student_id" />

    <EditText
        android:id="@+id/edit_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_birth_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/edit_student_id"
        app:layout_constraintStart_toStartOf="@+id/edit_student_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_full_name" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_birth_date"
        app:layout_constraintStart_toStartOf="@+id/edit_birth_date"
        app:layout_constraintTop_toBottomOf="@+id/spinner_address" />

    <EditText
        android:id="@+id/edit_gpa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_gpa"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/spinner_major" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_year">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_weight="1"
            android:text="@string/text_radio_male"
            android:textSize="@dimen/text_size_18" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_weight="1"
            android:text="@string/text_radio_female"
            android:textSize="@dimen/text_size_18" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:text="@string/text_radio_other"
            android:textSize="@dimen/text_size_18" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/edit_gpa"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/edit_gpa"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_year"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_year"
        app:layout_constraintStart_toStartOf="@+id/edit_gpa"
        app:layout_constraintTop_toTopOf="@+id/spinner_year" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_address"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_address"
        app:layout_constraintStart_toStartOf="@+id/edit_birth_date"
        app:layout_constraintTop_toTopOf="@+id/spinner_address" />

    <Spinner
        android:id="@+id/spinner_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_birth_date"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/edit_birth_date"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_major"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_major"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toTopOf="@+id/spinner_major" />

    <Spinner
        android:id="@+id/spinner_major"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>